Fixed dropdown icon in SelectComponent not visible when inside HeaderComponent

--- a/frontend-app/src/app/app-ui/header/header.component.scss
+++ b/frontend-app/src/app/app-ui/header/header.component.scss
@@ -2,7 +2,6 @@
   --padding-inline: var(--cvi-spacing-viljandi);
 
   display: block;
-  fill: var(--cvi-color-white);
   box-shadow: var(--cvi-shadow-beta);
 }
 
